--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+
 .App {
   text-align: center;
+  font-family: Bebas Neue;
 }
 
 .App-logo {
