--- a/src/Pages/Shared/Navigation/Navigation.css
+++ b/src/Pages/Shared/Navigation/Navigation.css
@@ -1,9 +1,11 @@
 .dropbtn {
-    background-color: #04AA6D;
+    background-color: #2bbef9;
     color: white;
     padding: 16px;
     font-size: 16px;
     border: none;
+    border-radius: 31px;
+    width: 221px;
   }
   
   .dropdown {
@@ -31,4 +33,11 @@
   
   .dropdown:hover .dropdown-content {display: block;}
   
-  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+  .dropdown:hover .dropbtn {background-color: #2bbef9;}
+
+
+
+
+  .navbg{
+    background-color: #2bbef9;
+  }
