--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
-
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Pacifico&family=Poppins:ital,wght@0,300;1,100;1,300&display=swap');
 .App {
   text-align: center;
+  font-family: 'Josefin Sans', sans-serif;
+font-family: 'Pacifico', cursive;
+font-family: 'Poppins', sans-serif;
 }
 
 .App-logo {
